backend/Manifests/ingressTest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 2
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: "gcr.io/google-samples/hello-app:2.0"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - secretName: backend-tls
  rules:
#  - host: "backend-ingress.local"
  - http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: backend-service
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: open
  labels:
    app: open
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: backend-ingress
  ports:
  - port: 443
    targetPort: 443
